# ScheduleReminder

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: windows-x86-release.yml
docs/: development-workflow.md  requirements.md  technical-design.md  ux-spec.md
scripts/: release-version.mjs  release-version.test.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs
src-tauri/src/db/: config.rs  migration.rs  mod.rs  persistence.rs  reminder_template_repository.rs
src-tauri/src/models/: mod.rs  reminder_action_log.rs  reminder_occurrence.rs  reminder_template.rs
src-tauri/src/notification/: event_executor.rs  mod.rs
src-tauri/src/scheduler/: dispatcher.rs  grace.rs  mod.rs  occurrence_generator.rs  repeat_rule.rs  runtime.rs
src-tauri/src/settings/: app_settings.rs
src-tauri/src/state/: app_identity.rs  app_runtime.rs  database.rs  mod.rs  reminder_templates.rs
src-tauri/src/tray/: menu.rs
src/app/: App.test.tsx  App.tsx  ReminderOverlay.tsx  events.ts
src/pages/calendar/: CalendarPage.test.tsx  CalendarPage.tsx
src/pages/reminders/: RemindersPage.test.tsx  RemindersPage.tsx
src/pages/settings/: SettingsPage.test.tsx  SettingsPage.tsx
src/pages/today/: TodayPage.test.tsx  TodayPage.tsx
src/services/: dashboard.test.ts  dashboard.ts  reminderTemplates.test.ts  reminderTemplates.ts  settings.test.ts  settings.ts
src/styles/: global.css
src/utils/: errors.test.ts  errors.ts
