[package]
name = "schedule-reminder"
version = "0.1.0"
edition = "2021"

[package.metadata]
description = "ScheduleReminder desktop app"

[lib]
name = "schedule_reminder"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
mysql = "^26.0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
