[package]
name = "schedule-reminder"
version = "0.1.0"
edition = "2021"

[package.metadata]
description = "ScheduleReminder desktop app"

[lib]
name = "schedule_reminder"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
