[package]
name = "schedule-reminder"
version = "1.0.2"
edition = "2021"

[package.metadata]
description = "时间助手桌面应用"

[lib]
name = "schedule_reminder"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
